--- a/index.html
+++ b/index.html
@@ -3,19 +3,38 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EXES </title>
+  <title>EXES | We Analyze, You Decide</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="assets/img/logo.png" />
+  <style>
+    @keyframes slide {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+    .animate-slide {
+      animation: slide 20s linear infinite;
+    }
+  </style>
 </head>
-<body class="bg-white text-gray-800">
 
-  <!-- Header -->
-  <nav class="bg-[#49A078] text-white p-4 flex justify-between items-center shadow-md">
-    <div class="flex items-center gap-2">
-      <img src="assets/img/logo.png" alt="EXES Logo" class="h-10 w-auto" />
-      <span class="font-bold text-xl">EXES</span>
+<body class="bg-white text-gray-800 min-h-screen flex flex-col">
+
+  <!-- ✅ Navbar with Inline Scrolling Slogan -->
+  <nav class="bg-[#49A078] text-white px-4 py-4 flex items-center shadow-md">
+    <!-- Logo -->
+    <div class="flex items-center gap-2 shrink-0">
+      <img src="assets/img/logo.png" alt="EXES Logo" class="h-16 w-16 rounded-xl object-cover shadow" />
+      <span class="font-bold text-2xl">EXES</span>
     </div>
-    <ul class="flex gap-6 text-sm">
+
+    <!-- 🔁 Scrolling Slogan (Inline, Responsive) -->
+    <div class="overflow-hidden relative flex-grow h-6 mx-6 hidden md:block">
+      <div class="absolute whitespace-nowrap animate-slide text-sm font-medium text-white">
+         • We Analyze, You Decide • We Analyze, You Decide • We Analyze, You Decide •
+      </div>
+    </div>
+
+    <!-- Navigation Links -->
+    <ul class="flex gap-6 text-sm shrink-0">
       <li><a href="index.html" class="hover:underline">Home</a></li>
       <li><a href="services.html" class="hover:underline">Services</a></li>
       <li><a href="my-journey.html" class="hover:underline">My Journey</a></li>
@@ -23,27 +42,40 @@
     </ul>
   </nav>
 
-  <!-- Hero -->
-  <section class="text-center py-24 px-4 bg-gray-100">
-    <h1 class="text-4xl font-bold text-[#2D3142] mb-4">We Analyze. You Decide.</h1>
-    <p class="text-lg text-gray-700 mb-8">Simple, affordable data services for businesses, students, and hustlers.</p>
-    <a href="https://forms.gle/hqQZdcpHF4Vnjxou8" target="_blank" rel="noopener" class="bg-[#49A078] text-white px-6 py-3 rounded shadow hover:bg-[#3c8864] transition">
+  <!-- Hero Section -->
+  <section class="text-center py-24 px-4 bg-gradient-to-br from-[#f0fdfa] to-[#d9f99d] flex-1">
+    <h1 class="text-4xl font-bold mb-4">Transform Your Data Into Actionable Insights</h1>
+    <p class="text-lg text-gray-600 mb-6">We analyze your messy data so you can make informed decisions.</p>
+    <a href="contact.html" class="bg-[#49A078] hover:bg-[#3e8865] text-white px-6 py-3 rounded-lg font-semibold transition duration-200">
       Start Your Project
     </a>
   </section>
 
-  <!-- About -->
-  <section class="max-w-5xl mx-auto py-16 px-4">
-    <h2 class="text-2xl font-semibold mb-4">About EXES</h2>
-    <p class="text-gray-700 text-lg leading-relaxed">
-      EXES (eXel Studio) is a data services platform designed to help small businesses, students, and hustlers clean messy data, extract key insights, and make smarter decisions. Using tools like Excel, SQL, Python, and Power BI, we offer fast, accurate and affordable data support.
-    </p>
+  <!-- How It Works Section -->
+  <section class="py-16 px-4 max-w-5xl mx-auto">
+    <h2 class="text-3xl font-bold mb-10 text-center">How It Works</h2>
+    <div class="grid md:grid-cols-3 gap-8 text-center">
+      <div>
+        <div class="text-4xl mb-2">📤</div>
+        <p class="font-bold mb-1">1. Upload Your Data</p>
+        <p>Send CSV, Excel, PDF, or any structured data.</p>
+      </div>
+      <div>
+        <div class="text-4xl mb-2">🧠</div>
+        <p class="font-bold mb-1">2. Describe Your Problem</p>
+        <p>Share your goal or what you'd like to understand.</p>
+      </div>
+      <div>
+        <div class="text-4xl mb-2">📈</div>
+        <p class="font-bold mb-1">3. Receive Your Insights</p>
+        <p>We clean, analyze, and visualize — you decide.</p>
+      </div>
+    </div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-[#2D3142] text-white py-6 text-center text-sm mt-20">
-    <p>&copy; 2025 EXES – eXel Studio. All rights reserved.</p>
-    <p>Contact: dericmarangu@gmail.com</p>
+  <footer class="bg-gray-100 py-6 text-center text-sm text-gray-500 mt-auto">
+    &copy; 2025 EXES – Built by Deric. All rights reserved.
   </footer>
 
 </body>
