--- a/my-journey.html
+++ b/my-journey.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Journey </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Journey – EXES</title>
   <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+    @keyframes slide {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+    .animate-slide {
+      animation: slide 20s linear infinite;
+    }
+  </style>
 </head>
-<body class="bg-white text-gray-800">
-
-  <!-- Navbar -->
-  <nav class="bg-[#49A078] text-white p-4 flex justify-between items-center shadow-md">
-    <div class="flex items-center gap-2">
-      <img src="assets/img/logo.png" alt="EXES Logo" class="h-10 w-auto" />
-      <span class="font-bold text-xl">EXES</span>
+<body class="bg-white text-gray-800 min-h-screen flex flex-col">
+  <!-- ✅ Navbar with Inline Scrolling Slogan -->
+  <nav class="bg-[#49A078] text-white px-4 py-4 flex items-center shadow-md">
+    <!-- Logo -->
+    <div class="flex items-center gap-2 shrink-0">
+      <img src="assets/img/logo.png" alt="EXES Logo" class="h-16 w-16 rounded-xl object-cover shadow" />
+      <span class="font-bold text-2xl">EXES</span>
     </div>
-    <ul class="flex gap-6 text-sm">
+
+    <!-- 🔁 Scrolling Slogan (Inline, Responsive) -->
+    <div class="overflow-hidden relative flex-grow h-6 mx-6 hidden md:block">
+      <div class="absolute whitespace-nowrap animate-slide text-sm font-medium text-white">
+         • We Analyze, You Decide • We Analyze, You Decide • We Analyze, You Decide •
+      </div>
+    </div>
+
+    <!-- Navigation Links -->
+    <ul class="flex gap-6 text-sm shrink-0">
       <li><a href="index.html" class="hover:underline">Home</a></li>
       <li><a href="services.html" class="hover:underline">Services</a></li>
       <li><a href="my-journey.html" class="hover:underline">My Journey</a></li>
@@ -22,32 +40,39 @@
     </ul>
   </nav>
 
-  <!-- Journey -->
-  <section class="max-w-5xl mx-auto py-16 px-4">
-    <h1 class="text-3xl font-bold text-[#2D3142] mb-6">My Journey & Case Studies</h1>
-    
-    <div class="space-y-8 text-gray-700">
-      <div>
-        <h2 class="text-xl font-semibold">📊 From Confused to Curious: My First SQL Breakdown</h2>
-        <p>How I cleaned and visualized monthly trends using SQL and Power BI for the first time.</p>
-      </div>
-
-      <div>
-        <h2 class="text-xl font-semibold">📈 Sales Forecasting with Power BI</h2>
-        <p>Client needed better sales insight. I delivered a dashboard with filters and predictive KPIs.</p>
-      </div>
-
-      <div>
-        <h2 class="text-xl font-semibold">🎓 Academic Performance Analytics</h2>
-        <p>Built a SQL + Excel system for tracking and visualizing student scores across terms.</p>
-      </div>
-
-      <div>
-        <h2 class="text-xl font-semibold">💰 Trading Journal Automation</h2>
-        <p>Created a trading log that calculates win rate, profit/loss ratio, and session analysis automatically.</p>
-      </div>
-    </div>
+  <!-- Journey Section -->
+  <section class="max-w-6xl mx-auto py-16 px-4">
+    <h1 class="text-3xl font-bold text-[#2D3142] mb-8 text-center">📘 My Journey & Case Studies</h1>
+    <div id="case-container" class="space-y-10"></div>
   </section>
+
+  <!-- Script to Load JSON -->
+  <script>
+    fetch('journey-data.json')
+      .then(res => res.json())
+      .then(data => {
+        const container = document.getElementById('case-container');
+        data.forEach(cs => {
+          const files = cs.files.map(f =>
+            `<li><a href="${f.link}" target="_blank" class="text-blue-600 hover:underline">${f.name}</a></li>`
+          ).join('');
+          container.innerHTML += `
+            <div class="bg-gray-50 p-6 rounded-xl shadow-md">
+              <h2 class="text-xl font-bold text-[#2D3142] mb-1">${cs.title}</h2>
+              <p class="text-sm text-gray-500 mb-3">📅 ${cs.date}</p>
+              <p class="text-gray-700 mb-3">${cs.description}</p>
+              <ul class="list-disc pl-5 text-sm text-gray-800 mb-2">${files}</ul>
+              <p class="text-sm mb-1"><strong>Tools:</strong> ${cs.tools}</p>
+              <a href="${cs.github}" class="text-green-600 font-semibold hover:underline" target="_blank">🔗 GitHub Project Repo</a>
+            </div>`;
+        });
+      });
+  </script>
+
+  <!-- Footer -->
+  <footer class="bg-gray-100 py-6 text-center text-sm text-gray-500">
+    &copy; 2025 EXES – Built by Deric. All rights reserved.
+  </footer>
 
 </body>
 </html>
