--- a/services.html
+++ b/services.html
@@ -1,47 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Our Services </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Our Services – EXES</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+  @keyframes slide {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(-100%); }
+  }
+  .animate-slide {
+    animation: slide 20s linear infinite;
+  }
+</style>
+
 </head>
-<body class="bg-white text-gray-800">
+<body class="bg-white text-gray-800 min-h-screen flex flex-col">
 
-  <!-- Navbar -->
-  <nav class="bg-[#49A078] text-white p-4 flex justify-between items-center shadow-md">
-    <div class="flex items-center gap-2">
-      <img src="assets/img/logo.png" alt="EXES Logo" class="h-10 w-auto" />
-      <span class="font-bold text-xl">EXES</span>
+  <!-- ✅ Navbar with Inline Scrolling Slogan -->
+<nav class="bg-[#49A078] text-white px-4 py-4 flex items-center shadow-md">
+  <!-- Logo -->
+  <div class="flex items-center gap-2 shrink-0">
+    <img src="assets/img/logo.png" alt="EXES Logo" class="h-16 w-16 rounded-xl object-cover shadow" />
+    <span class="font-bold text-2xl">EXES</span>
+  </div>
+
+  <!-- 🔁 Scrolling Slogan (Inline, Responsive) -->
+  <div class="relative flex-grow h-8 mx-6 overflow-hidden hidden md:flex items-center">
+    <div class="whitespace-nowrap animate-slide text-sm font-medium text-white">
+      • We Analyze, You Decide • We Analyze, You Decide • We Analyze, You Decide •
     </div>
-    <ul class="flex gap-6 text-sm">
-      <li><a href="index.html" class="hover:underline">Home</a></li>
-      <li><a href="services.html" class="hover:underline">Services</a></li>
-      <li><a href="my-journey.html" class="hover:underline">My Journey</a></li>
-      <li><a href="contact.html" class="hover:underline">Contact</a></li>
-    </ul>
-  </nav>
+  </div>
 
-  <!-- Services -->
+  <!-- Navigation Links -->
+  <ul class="flex gap-6 text-sm shrink-0">
+    <li><a href="index.html" class="hover:underline">Home</a></li>
+    <li><a href="services.html" class="hover:underline">Services</a></li>
+    <li><a href="my-journey.html" class="hover:underline">My Journey</a></li>
+    <li><a href="contact.html" class="hover:underline">Contact</a></li>
+  </ul>
+</nav>
+
+
+  <!-- Services Section -->
   <section class="max-w-6xl mx-auto py-16 px-4">
-    <h1 class="text-3xl font-bold mb-8 text-center text-[#2D3142]">Our Services</h1>
-    <div class="grid md:grid-cols-2 gap-8 text-lg text-gray-700">
-      <ul class="list-disc pl-5 space-y-3">
-        <li>Excel Data Cleaning & Reformatting</li>
-        <li>Power BI Dashboards (Sales, KPIs, Academic)</li>
-        <li>SQL Querying, Joins & Database Extraction</li>
-        <li>Python-based Data Analysis & Automation</li>
-        <li>Performance Reports & Insights</li>
-      </ul>
-      <ul class="list-disc pl-5 space-y-3">
-        <li>Trading Journals (Automated Metrics)</li>
-        <li>Business Trend Analysis & Forecasts</li>
-        <li>Custom Client Reports (PDF, Excel)</li>
-        <li>Academic/Student Performance Analytics</li>
-        <li>Data Entry, Structure, and Formatting</li>
-      </ul>
-    </div>
+    <h1 class="text-3xl font-bold mb-6 text-center">💼 Our Core Services</h1>
+    <p class="text-center text-gray-600 mb-12">
+      At EXES, we specialize in turning raw data into clear business decisions.
+    </p>
+
+    <ul class="space-y-6 text-lg text-gray-800 max-w-3xl mx-auto">
+      <li>📥 <strong>Data Acquisition</strong> – Gathering data from Excel, Google Forms, or other sources.</li>
+      <li>🧹 <strong>Data Cleaning</strong> – Handling missing values, duplicates, and inconsistent entries.</li>
+      <li>📊 <strong>Data Visualization</strong> – Clear, interactive charts using Power BI or Excel Dashboards.</li>
+      <li>🧠 <strong>Insight Generation</strong> – Identifying patterns, opportunities, and risks.</li>
+      <li>📝 <strong>Data Storytelling</strong> – Explaining your data in a narrative that drives decisions.</li>
+    </ul>
   </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-100 py-6 text-center text-sm text-gray-500">
+    &copy; 2025 EXES – Built by Deric. All rights reserved.
+  </footer>
 
 </body>
 </html>
