--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 
   <!-- Footer -->
   <footer class="bg-gray-100 py-6 text-center text-sm text-gray-500 mt-auto">
+     <!-- Logo -->
+    <div class="flex items-center gap-2 shrink-0">
+      <img src="assets/img/logo.png" alt="EXES Logo" class="h-16 w-16 rounded-xl object-cover shadow" />
+      <span class="font-bold text-2xl">EXES</span>
+    </div>
     &copy; 2025 EXES – Built by Deric. All rights reserved.
   </footer>
 
