--- a/index.html
+++ b/index.html
@@ -73,15 +73,27 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-gray-100 py-6 text-center text-sm text-gray-500 mt-auto">
-     <!-- Logo -->
-    <div class="flex items-center gap-2 shrink-0">
-      <img src="assets/img/logo.png" alt="EXES Logo" class="h-16 w-16 rounded-xl object-cover shadow" />
-      <span class="font-bold text-2xl">EXES</span>
+<!-- Footer -->
+<footer class="bg-gray-100 py-6 text-center text-sm text-gray-500 mt-auto border-t">
+  <div class="container mx-auto flex flex-col items-center gap-4 sm:flex-row sm:justify-between">
+
+    <!-- Logo and Brand -->
+    <div class="flex items-center gap-2">
+      <img src="assets/img/logo.png" alt="EXES Logo" class="h-12 w-12 rounded-xl object-cover shadow" />
+      <span class="font-bold text-xl text-gray-800">EXES</span>
     </div>
-    &copy; 2025 EXES – Built by Deric. All rights reserved.
-  </footer>
+
+    <!-- Copyright -->
+    <div class="text-xs sm:text-sm text-gray-500">
+      &copy; 2025 EXES – Built by 
+      <a href="https://deric254.github.io/portfolio/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-medium">
+        Deric
+      </a>. All rights reserved.
+    </div>
+    
+  </div>
+</footer>
+
 
 </body>
 </html>
