--- a/index.html
+++ b/index.html
@@ -74,23 +74,34 @@
   </section>
 
 <!-- Footer -->
-<footer class="bg-gray-100 py-6 text-center text-sm text-gray-500 mt-auto border-t">
-  <div class="container mx-auto flex flex-col items-center gap-4 sm:flex-row sm:justify-between">
+<footer class="bg-gray-100 py-4 px-4 text-sm text-gray-500 mt-auto border-t">
+  <div class="container mx-auto flex flex-wrap items-center justify-between gap-4">
 
-    <!-- Logo and Brand -->
-    <div class="flex items-center gap-2">
-      <img src="assets/img/logo.png" alt="EXES Logo" class="h-12 w-12 rounded-xl object-cover shadow" />
-      <span class="font-bold text-xl text-gray-800">EXES</span>
+    <!-- Left: Logo, Brand, and Slogan -->
+    <div class="flex items-center gap-3">
+      <img src="assets/img/logo.png" alt="EXES Logo" class="h-10 w-10 rounded-xl object-cover shadow" />
+      <div class="flex flex-col leading-tight">
+        <span class="font-extrabold text-xl text-gray-800 tracking-wide">EXES</span>
+        <span class="text-xs italic text-gray-500 -mt-1">We analyze. You decide.</span>
+      </div>
     </div>
 
-    <!-- Copyright -->
-    <div class="text-xs sm:text-sm text-gray-500">
+    <!-- Center: Copyright -->
+    <div class="text-xs sm:text-sm text-gray-400 text-center sm:text-left">
       &copy; 2025 EXES – Built by 
       <a href="https://deric254.github.io/portfolio/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-medium">
         Deric
       </a>. All rights reserved.
     </div>
-    
+
+    <!-- Right: Deric Name then Image -->
+    <div class="flex items-center gap-2">
+      <a href="https://deric254.github.io/portfolio/" target="_blank" rel="noopener noreferrer" class="text-gray-700 hover:text-blue-600 font-semibold text-sm">
+        Deric Marangu
+      </a>
+      <img src="assets/img/deric.png" alt="Deric's Photo" class="h-8 w-8 rounded-full object-cover shadow-md" />
+    </div>
+
   </div>
 </footer>
 
